Closed Bug 471106 Opened 16 years ago Closed 16 years ago

impossible to move imported bookmarks into different collection

Categories

(Camino Graveyard :: Bookmarks, defect)

x86
macOS
defect
Not set
major

Tracking

(Not tracked)

RESOLVED FIXED
Camino2.0

People

(Reporter: marc, Assigned: stuart.morgan+bugzilla)

References

Details

(Keywords: regression)

Attachments

(1 file)

User-Agent: Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en; rv:1.9.0.6pre) Gecko/2008121820 Camino/2.0b1 (like Firefox/3.0.6pre) Build Identifier: Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en; rv:1.9.0.6pre) Gecko/2008121820 Camino/2.0b1 (like Firefox/3.0.6pre) I have import my firefox bookmarks and I cannot move them in the Bookmark Bar/Menu. I tried import with a file, exactly the same problem... I tried too a drag and drop from the firefox Bookmarks but only the first element was import... Reproducible: Always Steps to Reproduce: 1. Import firefox bookmarks 2. try to move the import bookmarks Menu Bar 3. Actual Results: nothing go in the Camino Bookmarks Menu Bar Expected Results: move Bookmarks
Flags: camino2.0b1+
Flags: camino2.0b1+
If you click on "Imported Firefox Bookmarks" in the left-hand pane of the bookmark manager, then click in the right-hand pane and select all (Cmd-A), and then drag all the highlighted bookmarks to the "Bookmark Menu" or "Bookmark Bar" items back in the left-hand pane, do the bookmarks end up where you want them?
Summary: impossible to move import bookmark in the different section → impossible to move imported bookmarks into different collection
Nothing are moved...
Do you see any messages from Camino in the console.log (accessed via /Applications/Utilities/Console.app) when you try to move the bookmarks?
Never mind, I see this, too (and no, no console messages). You can move the "Imported foo Bookmarks" folder elsewhere, but you cannot move any of the contents out of the "Imported foo Bookmarks" folder. You also can't copy bookmarks (Cmd-C or via drag). I'm not positive, but this may be related to the HTML bookmarks importer; I don't see this bug with Safari (or Opera), but I do with Firefox, iCab 3, SeaMonkey…. This works in 1.6.6 and doesn't work in 2.0b1; beyond that, I don't know where it regressed.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Flags: camino2.0?
Attached patch fixSplinter Review
The move I was doing to shim the new import style into the old loop wasn't correct (it ended up destroying the parents of the top-level bookmarks, which is why they wouldn't move). Rather than fix it, I removed it entirely and put the shim higher up, to start moving the caller closer to the form it will eventually have when I reorganize the other bookmark importers.
Assignee: nobody → stuart.morgan+bugzilla
Attachment #354540 - Flags: superreview?(mikepinkerton)
Attachment #354540 - Flags: superreview?(mikepinkerton) → superreview+
Landed on cvs trunk.
Flags: camino2.0? → camino2.0+
Target Milestone: --- → Camino2.0
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: