Bug 471106 - impossible to move imported bookmarks into different collection. Patch by Stuart Morgan <stuart.morgan+bugzilla@gmail.com>, r/sr=pink